; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_drop_caches.c_drop_slab.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_drop_caches.c_drop_slab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @drop_slab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drop_slab() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %5, %0
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call i32 @shrink_slab(i32 1000, i32 %3, i32 1000)
  store i32 %4, i32* %1, align 4
  br label %5

5:                                                ; preds = %2
  %6 = load i32, i32* %1, align 4
  %7 = icmp sgt i32 %6, 10
  br i1 %7, label %2, label %8

8:                                                ; preds = %5
  ret void
}

declare dso_local i32 @shrink_slab(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
